pgrx-unit-tests/tests/compile-fail/no-static-memcx.stderr
error[E0521]: borrowed data escapes outside of function
 --> tests/compile-fail/no-static-memcx.rs:6:92
  |
5 |   #[pg_extern]
  |   ------------
  |   |
  |   lifetime `'fcx` defined here
  |   in this attribute macro expansion
6 |   pub fn accept_mcx_return_timetz(memcx: &MemCx<'static>) -> PBox<'static, TimeWithTimeZone> {
  |  ____________________________________________________________________________________________^
7 | |     let timetz = TimeWithTimeZone::new(4, 20, 0.0).unwrap();
8 | |     PBox::new_in(timetz, memcx)
9 | | }
  | | ^
  | | |
  | | `fcinfo` is a reference that is only valid in the function body
  | |_`fcinfo` escapes the function body here
  |   argument requires that `'fcx` must outlive `'static`
  |
  = note: this error originates in the attribute macro `pg_extern` (in Nightly builds, run with -Z macro-backtrace for more info)
